--- a/app/src/main/resources/WebContent/index.css
+++ b/app/src/main/resources/WebContent/index.css
@@ -1,4 +1,8 @@
-a:link, a:visited {
+ul  {
+    list-style: none;
+}
+
+a {
     background-color: green;
     color: white;
     padding: 14px 25px;
@@ -6,6 +10,7 @@ a:link, a:visited {
     text-decoration: none;
     display: table;
 	width: 100px;
+	margin-bottom: 30px;
 }
 
 
